force-app/main/default/objects/Medication_History__c/Medication_History__c.object-meta.xml
<CustomObject>
    <label>Medication History</label>
    <nameField>
        <displayFormat>MH-{0000}</displayFormat>
        <label>Medication History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medication History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>