force-app/main/default/objects/Medication_History__c/fields/Currently_taking__c.field-meta.xml
<CustomField>
    <fullName>Currently_taking__c</fullName>
    <description>The field is used to indicate whether the patient is currently taking the medication.</description>
    <label>Currently taking?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>