force-app/main/default/objects/Medication_History__c/fields/Dose__c.field-meta.xml
<CustomField>
    <fullName>Dose__c</fullName>
    <description>The field is used to specify the amount or strength of the medication taken during each administration.</description>
    <label>Dose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>