force-app/main/default/objects/Medication_History__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>Specifies how often the medication is taken within a specified time frame and indicate the frequency of administration, such as &quot;daily,&quot; &quot;Binge,&quot; &quot;intermittent,&quot; or any other applicable frequency.</description>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Binge</fullName>
            </value>
            <value>
                <fullName>intermittent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>