force-app/main/default/objects/Medication_History__c/fields/Medication__c.field-meta.xml
<CustomField>
    <fullName>Medication__c</fullName>
    <description>Captures the name of the medications as prescribed or used by the patient.</description>
    <label>Medication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>